Prefer Java types over google guava