@@ -15,7 +15,6 @@
  */
 package io.dialob.session.engine.program.expr.arith;
 
-import com.google.common.collect.ImmutableSet;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.dialob.rule.parser.api.ValueType;
 import io.dialob.session.engine.program.EvalContext;
@@ -55,6 +54,6 @@ public interface IsOnLastPage extends Expression {
   @NonNull
   @Override
   default Set<EventMatcher> getEvalRequiredConditions() {
-    return ImmutableSet.of(whenActivePageUpdated(), whenAvailableItemsUpdated());
+    return Set.of(whenActivePageUpdated(), whenAvailableItemsUpdated());
   }
 }
