@@ -15,7 +15,6 @@
  */
 package io.dialob.session.engine.session.command;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.dialob.session.engine.program.EvalContext;
@@ -36,7 +35,7 @@ public interface AbstractUpdateAttributeCommand<T> extends AbstractUpdateCommand
   default Set<EventMatcher> getEventMatchers() {
     Set<EventMatcher> eventMatchers = getExpression().getEvalRequiredConditions();
     if (getTargetId().isPartial()) {
-      return Sets.union(eventMatchers, ImmutableSet.of(
+      return Sets.union(eventMatchers, Set.of(
         EventMatchers.whenItemAdded(getTargetId())
       ));
     }
