@@ -15,7 +15,6 @@
  */
 package io.dialob.session.engine.session.command;
 
-import com.google.common.collect.ImmutableSet;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.dialob.session.engine.program.EvalContext;
 import io.dialob.session.engine.session.model.ImmutableItemIndex;
@@ -50,6 +49,6 @@ public interface InitRowGroupItemsCommand extends AbstractUpdateCommand<ItemId,I
   @NonNull
   @Override
   default Set<EventMatcher> getEventMatchers() {
-    return ImmutableSet.of(whenValueUpdated(getTargetId()));
+    return Set.of(whenValueUpdated(getTargetId()));
   }
 }
